--- a/federationserver/app.yaml
+++ b/federationserver/app.yaml
@@ -4,24 +4,10 @@ runtime: python
 api_version: 1
 
 handlers:
-  
-- url: /index\.html
-  script: home.py
-  
-- url: /
-  static_dir: static
-  
-- url: /admin/.*
-  script: admin.py
-  login: admin
-  
-- url: /api/.*
+
+- url: /token
   script: main.py
-  secure: always
-  
-- url: /init
-  script: init.py
-  login: admin
-  
-- url: /.*
-  script: not_found.py
+
+- url: /
+  static_dir: html
+
