--- a/federationserver/app.yaml
+++ b/federationserver/app.yaml
@@ -5,9 +5,10 @@ api_version: 1
 
 handlers:
 
-- url: /token
+- url: /favicon\.ico
+  static_files: static/favicon.ico
+  upload: static/favicon.ico
+
+- url: /.*
   script: main.py
-
-- url: /
-  static_dir: html
-
+  
