--- a/conet-testbed-federation-api/federationserver/federationserver/index.yaml
+++ b/conet-testbed-federation-api/federationserver/federationserver/index.yaml
@@ -9,3 +9,8 @@ indexes:
   properties:
   - name: __key__
     direction: desc
+
+- kind: api_platform
+  properties:
+  - name: __key__
+    direction: desc
