--- a/conet-testbed-federation-api/federationserver/federationserver/app.yaml
+++ b/conet-testbed-federation-api/federationserver/federationserver/app.yaml
@@ -8,9 +8,9 @@ builtins:
 - datastore_admin: on
 
 handlers:
-- url: /remote_api
-  script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
-  login: admin
+- url: /favicon\.ico
+  static_files: favicon.ico
+  upload: favicon.ico
 
 - url: /_ah/queue/deferred
   script: djangoappengine/deferred/handler.py
@@ -19,6 +19,10 @@ handlers:
 - url: /media/admin
   static_dir: django/contrib/admin/media/
   expiration: '0'
+  
+- url: /media
+  static_dir: media/
+  expiration: '365d'
 
 - url: /.*
   script: djangoappengine/main/main.py
