--- a/conet-testbed-federation-api/federationserver/index.yaml
+++ b/conet-testbed-federation-api/federationserver/index.yaml
@@ -90,3 +90,13 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: api_job
+  properties:
+  - name: experiment_id
+  - name: datetime_from
+
+- kind: api_virtualtask
+  properties:
+  - name: experiment_id
+  - name: step
