added new config framework

--- a/web-cotefe-net/app.yaml
+++ b/web-cotefe-net/app.yaml
@@ -24,6 +24,9 @@ handlers:
 - url: /htmls
   static_dir: htmls
 
+- url: /templates
+  static_dir: templates
+
 - url: /images/(.*)
   static_files: images/\1
   upload: images/.*
