--- a/web-cotefe-net/app.yaml
+++ b/web-cotefe-net/app.yaml
@@ -4,35 +4,44 @@ runtime: python
 api_version: 1
 threadsafe: true
 
-handlers: 
+handlers:
 
 - url: /css
   static_dir: css
+  secure: always
 
 - url: /
   static_files: htmls/index.html
   upload: htmls/.*
+  secure: always
 
 - url: /dashboard
   static_files: htmls/dashboard.html
   upload: htmls/.*
+  secure: always
   
 - url: /favicon.ico
   static_files: favicon.ico
   upload: /favicon.ico
+  secure: always
   
 - url: /htmls
   static_dir: htmls
+  secure: always
 
 - url: /templates
   static_dir: templates
+  secure: always
 
 - url: /images/(.*)
   static_files: images/\1
   upload: images/.*
+  secure: always
 
 - url: /scripts
   static_dir: scripts
+  secure: always
   
 - url: /io
   script: pythonModule/io.py
+  secure: always
