--- a/api-cotefe-net/app.yaml
+++ b/api-cotefe-net/app.yaml
@@ -1,4 +1,4 @@
-application: api-cotefe-net
+application: cotefe-server
 version: 1
 runtime: python27
 api_version: 1
@@ -21,10 +21,7 @@ handlers:
 
 - url: /.*
   script: main.app
-  secure: optional
-
-inbound_services:
-- warmup
+  secure: always
 
 libraries:
 - name: jinja2
