--- a/api-cotefe-net/app.yaml
+++ b/api-cotefe-net/app.yaml
@@ -5,7 +5,6 @@ api_version: 1
 threadsafe: yes
 
 handlers:
-
 - url: /css
   static_dir: static/css
   
@@ -26,3 +25,6 @@ handlers:
 libraries:
 - name: jinja2
   version: latest
+  
+builtins:
+- remote_api: on
