--- a/web-cotefe-net/app.yaml
+++ b/web-cotefe-net/app.yaml
@@ -1,6 +1,7 @@
 application: web-cotefe-net
 version: 1
-runtime: python
+#runtime: python
+runtime: python27
 api_version: 1
 threadsafe: true
 
@@ -41,6 +42,6 @@ handlers:
   static_dir: scripts
   secure: always
   
-- url: /io
-  script: pythonModule/io.py
-  secure: always
+#- url: /io
+#  script: pythonModule/io.py
+#  secure: always
